--- a/partials/header.html
+++ b/partials/header.html
@@ -7,7 +7,7 @@
   <a id="homeLink" href="/" class="brand home-link" aria-label="Home">
     <img src="/assets/images/profile.webp" alt="Santhosh Kumar"
       class="brand-avatar" width="32" height="32" />
-    <span class="brand-text">SANTHOSH</span>
+    <span class="brand-text">SANTHOSH KUMAR CHANDRASHEKAR</span>
   </a>
 
   <!-- DESKTOP NAV (middle) -->
