Change brand avatar image and size
Updated brand avatar image source and dimensions.

--- a/partials/header.html
+++ b/partials/header.html
@@ -5,8 +5,8 @@
   <div class="header-inner">
   <!-- BRAND (left) -->
   <a id="homeLink" href="/" class="brand home-link" aria-label="Home">
-    <img src="/assets/images/profile.webp" alt="Santhosh Kumar"
-      class="brand-avatar" width="32" height="32" />
+    <img src="/assets/images/skc.webp" alt="Santhosh Kumar"
+      class="brand-avatar" width="36" height="36" />
     <span class="brand-text">SANTHOSH</span>
   </a>
     
