--- a/partials/header.html
+++ b/partials/header.html
@@ -5,10 +5,15 @@
   <div class="header-inner">
   <!-- BRAND (left) -->
   <a id="homeLink" href="/" class="brand home-link" aria-label="Home">
-    <img src="/assets/images/skc.webp" alt="Santhosh Kumar"
-      class="brand-avatar" width="36" height="36" />
-    <span class="brand-text">SANTHOSH</span>
-  </a>
+  <div class="brand-box">
+    <img src="/assets/images/skc.webp" alt="Santhosh Kumar">
+  </div>
+
+  <div class="brand-name">
+    <span class="line1">Santhosh Kumar</span>
+    <span class="line2">Chandrashekar</span>
+  </div>
+</a>
     
   <!-- RIGHT SIDE ACTIONS (right) -->
   <div class="header-actions">
