Change header logo to vertical version
Updated the logo image in the header to use a vertical version.

--- a/partials/header.html
+++ b/partials/header.html
@@ -4,10 +4,10 @@
 <header class="site-header" id="siteHeader">
   <div class="header-inner">
   <!-- BRAND (left) -->
-  <a id="homeLink" href="/" class="brand home-link" aria-label="Home">
-  <div class="brand-box">
-    <img src="/assets/images/skc.webp" alt="Santhosh Kumar">
-  </div>
+<a id="homeLink" href="/" class="brand home-link" aria-label="Home">
+  <img src="/assets/images/skc-vertical.webp"
+       alt="SKC Logo"
+       class="brand-vertical">
 
   <div class="brand-name">
     <span class="line1">Santhosh Kumar</span>
