Update footer description for clarity

--- a/partials/footer.html
+++ b/partials/footer.html
@@ -13,7 +13,7 @@
     </p>
 
     <p class="footer-sub">
-      Cloud & DevOps Portfolio Architect • Enterprise Technology Leader
+      Cloud strategy. Platform excellence. Measurable impact.
     </p>
 
   </div>
