Revise footer tagline for clarity and conciseness

--- a/partials/footer.html
+++ b/partials/footer.html
@@ -13,7 +13,7 @@
     </p>
 
     <p class="footer-tagline">
-      Cloud strategy. Platform excellence. Measurable impact.
+      Cloud. Platform. Business impact.
     </p>
 
   </div>
